@@ -4,6 +4,8 @@ NOTE: This is the 1.3.X development branch.
 Put code changes right below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2007)
+ - 27-Dec-09 bb In includes/init.php, moving some of the CSS links into print_header($INC)
+   and some other cleanup.
  - 26-Dec-09 bb Removing PHP from JavaScript and vice versa 
    and some cleanup for consistancy - register.php
  - 27-Nov-09 bb Fix bug [ 2903004 ] Warning message after successfully login
